--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "devDependencies": {
     "@types/node": "^17.0.16",
     "@types/react": "^17.0.39",
+    "@withshepherd/faker": "^5.5.5",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "miragejs": "^0.1.43",
     "typescript": "^4.5.5"
   }
 }
